<resources>
    <string name="app_name">Smartpages1.1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="search_hint">Sonesh Jain</string>
    <string name="intramojoappid">efc4e5c916d775b175d9496804977f0b</string>
    <string name="intramojoapptoken">c3f10dda537707e4991a9a17c46773f5</string>
    <string name="instamojouri">https://www.instamojo.com/</string>
    <string name="feedbackheader">Smartpage feedback lets you send us suggeestions about our products. We welcome problem reports, feature ideas and general comments</string>
    <string name="feedbackcontent">Start by writing a brief description</string>
    <string name="feedbackfooter">Next we\'ll let you identify ideas of the product related to your description</string>
    <string name="cognalysapp_id">c2a209fcb0eb4dd8b4a50ac</string>
    <string name="cognalysaccess_token">b7275ffdf43bf57f4cf04f8ba8a1eb5cbaefc779</string>
    <string name="reportheader">We at Audegn strive to make sure the best in class customer service and product development. Kindly report the issue you are facing. Our tech-team ninjas are waiting for your command.</string>
    <string name="reportcontent">Start by defining your problem</string>
    <string-array name="nav_drawer_items">
        <item >Profile</item>
        <item >Transactions</item>
        <item >Notifications</item>
        <item >Settings</item>
        <item >Terms</item>
        <item >Developers</item>
        <item>Report a problem</item>
        <item >Help</item>
    </string-array>
    <string-array name="days">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="help1">What can I sell?</string>
    <string name="help2">Can I upload a file?</string>
    <string name="help3">How much can I sell a product for?</string>
    <string name="help4">I don\'t live in the United States. Can I still use Chec?</string>
    <string name="help5">Do you support international currencies?</string>
    <string name="help6">How much does it cost?</string>
    <string name="help7">Do you charge a fee if my customer goes through PayPal?</string>
    <string name="help8">How will I get paid?</string>
    <string name="help9">Is Chec secure?</string>
    <string name="help10">The FAQ didn\'t answer my question. Who do I contact?</string>
    <string name="help11">Contact us directly</string>
    <string name="help12">Experiencing problems? Want a refund?</string>
    <string name="helpa1">People use Chec to sell t-shirts, independent music albums, videos, and even collect donations. As we state, you can sell anything, with a few understandable exceptions as outlined in the User Agreement.</string>
    <string name="helpa2">Absolutely! We\'ll host it in our servers. You can upload any sort of file from your computer. Have a book in PDF format? No problem. Selling an album? Sure. Just make sure that the file is under 500mb, and you have the rights to distribute the file..</string>
    <string name="helpa3">In USD, you can price a product for as low as $0.50 and as much as $100,000.</string>
    <string name="helpa4">Yes, Chec is available worldwide.</string>
    <string name="helpa5">Yes, we do. Currently, we have support for USD, GBP, EURO, CAD, YEN, BRL, AUD $, and NZ $.</string>
    <string name="helpa6">It is only 3.5% per transaction. Let\'s say you are selling a ticket to your show for $100. The fee is $3.50 and $96.50 is deposited into your account. There are no setup, monthly, hosting, or hidden fees.</string>
    <string name="helpa7">Yes, we charge a 2% fee for all transactions processed via PayPal, unless you are subscribed to our powerseller plan. There are no setup, monthly, hosting, or hidden fees.</string>
    <string name="helpa8">Payouts are issued every second friday, for all transactions up until a week before that date. (Provided your balance is over $20). Merchants are paid out into their PayPal accounts, or US Bank Accounts.</string>
    <string name="helpa9">Of course! We hold ourselves to the highest standard when it comes to the security of your private information and transaction. All transactions are fully encrypted and SSL secured, and processed via a PCI Compliant Server.</string>
    <string name="helpa10">We take customer service very seriously. If you have any questions, feel free to email us directly athello@trychec.com.</string>
    <string name="helpa12">If you are having trouble with a product you have purchased, we recommend contacting the seller directly in the email given to you in the receipt. If they are not responsive or uncooperative, please forward a copy of your email to us and any other details you think are relevant and we will resolve this issue for you.</string>
    <string name="privacypolicyh">Privacy Policy</string>
    <string name="privacypolicyc">This Privacy Policy will describe how we will collect, handle and use any information, including but not exclusive to personal information, provided to us through your use of the services provided by trychec.com (the website) and Swipe Inc (the company).</string>
    <string name="termsh">Terms</string>
    <string name="terms1">The Website – Refers to the website, tools and applications found on the audegn.com website.</string>
    <string name="terms2">The Company – Refers to the company Audegn Innovation Labs(TM) and Audegn Design Technologies Pvt Ltd. We made Smartpage.</string>
    <string name="terms3">The Service – Refers to the use of the website, tools and applications found on trychec.com and ch.eckout.com.</string>
    <string name="acknowledgementh">Acknowledgement</string>
    <string name="acknowledgementc">By signing up and using The Service you agree to abide by and accept the Terms of Use and Privacy Policy of The Website and accept any decision made in accordance with these rules displayed here.\nBy accepting the Privacy Policy and the Terms of Use, you expressly consent to our collection, storage, use and disclosure of your personal information as described in this Privacy Policy.\nThis Privacy Policy is effective upon acceptance for new users and is otherwise effective from February 24, 2013</string>
    <string name="data_collection">Data Collection</string>
    <string name="data1h">What is personal data?</string>
    <string name="data1c">Personal Data – Refers to data that would allow someone to be able to identify or contact you.\nExamples of personal data; name, address, telephone number, e-mail address and other forms of associated non-public personally identifiable information that is linked to you or your personal data.</string>
    <string name="data2h">What is anonymous data?</string>
    <string name="data2c">Anonymous Data – Refers to data that is not associated with or linked to your personal data.\nExamples of anonymous data include; traffic analytics, user trends and other forms of aggregated data. Anonymous data does not, by itself, allow the identification of individual persons or accounts.</string>
    <string name="data3h">Do I have to provide personal data?</string>
    <string name="data3c">To browse the website you do not need to provide any personal data, however in order to use The Service you will need to provide some essential personal data for security and processing purposes.\nIf you have provided us with Personal Data, you are no longer anonymous and you consent to the transfer and storage of that data on our secure United States servers.\nWhat personal data will we collect and store?</string>
    <string name="data3c1">Identity data	Name, e-mail address, phone number, contact information etc.</string>
    <string name="data3c2">Financial data	Such as credit card or bank account numbers.</string>
    <string name="data3c3">Transaction data	Buying, selling, content creation and other activities performed during your use of The Website.</string>
    <string name="data3c4">Logistical data	Shipping, billing and other information you provide when purchasing.</string>
    <string name="data3c5">Community data	Messages, dispute resolution, feedback, correspondence through The Website and correspondence sent directly to us.</string>
    <string name="data3c6">Interaction data	Data from your interaction with The Website, Service and content, including device ID, computer and connection information, statistics for page views and traffic, IP address and other web log information.</string>
    <string name="data3c7">Security data	Data you to submit to authenticate yourself. We may ask for this if we believe you are violating site policies. For example, we may ask you to send us proof of identity in the form of a utility bill or other identifying source to verify your address. We may also ask you to answer additional questions to verify your identity or ownership of a product.</string>
    <string name="data3c8">Demographic data	Data from other companies such as demographic and navigation data.</string>
    <string name="data3c9">Correspondence data	When you provide us feedback or otherwise contact, we will collect your name and e-mail address, as well as any other content included in the correspondence. This is done so that we can reply to you in the future.</string>
    <string name="data3c10">Third party data	Any additional information provided by third parties.</string>
    <string name="cookiesh">Do we use cookies?</string>
    <string name="cookiesc">We use cookies and URL information to gather information regarding the date and time of your visit and the information you searched for and viewed.</string>
    <string name="cookieswhath">What are cookies?</string>
    <string name="cookieswhatc">"Cookies" are pieces of information that a website sends to your computer’s hard drive while you are viewing the Website. We use;</string>
    <string name="cookieswhatc1">Session Cookies These will expire once you close your web browser</string>
    <string name="cookieswhatc2">Persistent Cookies	These will stay on your computer until you delete them. Assistance with this can be found in your browsers help section. We do this to provide you with a personalised and interactive experience whilst using The Website.</string>
    <string name="thirdpartydatah">How do we use third party data?</string>
    <string name="thirdpartydatac">We may on occasion receive Personal and/or Anonymous Data about you from Third party companies who we work with.\nWhen these third party companies and/or individuals supply us with Personal Data, we may add this data to the data we already have provided by you in order to improve The Service we provide.</string>
    <string name="thirdpartyloginh">Third-Party Login and registration</string>
    <string name="thirdpartyloginc">We may offer login services that allow you to use third party login details to sign into The Website. With your permission, we may also transfer to The Website profile information contained in your third-party profile.\nWe may also, for your convenience, enable you to import information about yourself and your contacts, as well as enable you to share information with those third-party sites. If you wish to disable sharing, you will be able to do so.</string>
    <string name="informationshareh">What information will be shared by The Website?</string>
</resources>